--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,6 @@
     justify-content: space-evenly;
 }
 
-button {
-    color: white;
+#tictactoebtn, #tictactoeimg {
+    background-color: #38d9c3;
 }
