Add rock paper scissors image, add to button element

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@
     justify-content: space-evenly;
 }
 
-#tictactoebtn, #tictactoeimg {
+#tictactoebtn, #tictactoeimg, #rockpaperscissorbtn, #rockpaperscissorsimg {
     background-color: #38d9c3;
 }
+
