Add default none display to game divs, added query selectors for each

--- a/src/styles.css
+++ b/src/styles.css
@@ -44,3 +44,7 @@
 #etch-a-sketchbtn, #etch-a-sketchimg {
     background-color: #8a30ff;
 }
+
+#TicTacToe, #RockPaperScissors, #etch-a-sketch {
+    display: none;
+}
